# flask-scaffold

./: pyproject.toml  requirements.txt
